--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node backend/main.js",
-    "main": "nodemon backend/main.js",
-    "client": "npm run dev --prefix frontend",
+    "start": "node server/main.js",
+    "main": "nodemon server/main.js",
+    "client": "npm run dev --prefix client",
     "dev": "concurrently \"npm run main\" \"npm run client\""
   },
   "keywords": [],
